--- a/src/main/resources/templates/itemList.html
+++ b/src/main/resources/templates/itemList.html
@@ -144,19 +144,22 @@
     </style>
 </head>
 
-    <div class ="nav-bar">
+    <div class="nav-bar">
         <div class="nav-title"> Clothing Warehouse </div>
-        <a th:href="@{/}">HOME</a>
+        <a th:href="@{/home}">HOME</a>
         <a th:href="@{/design}">DESIGN</a>
         <a th:href="@{/itemList}">ITEM LIST</a>
+        <div th:if="${hasRoleAdmin}">
+            <a th:href="@{/itemManagement}">MANAGE STOCK</a>
+        </div>
         <a th:href="@{/about}">ABOUT</a>
         <div class="nav-squish">
-            <span class="nav-register">
-                <a th:href="@{/register}">Register</a>
-            </span>
+                <span class="nav-register">
+                    <a th:href="@{/register}">Register</a>
+                </span>
             <span class="nav-login">
-                <a th:href="@{/login}">Login</a>
-            </span>
+                    <a th:href="@{/login}">Login</a>
+                </span>
         </div>
     </div>
 
