--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -119,11 +119,14 @@
     </style>
 </head>
 
-    <div class ="nav-bar">
+    <div class="nav-bar">
         <div class="nav-title"> Clothing Warehouse </div>
-        <a th:href="@{/}">HOME</a>
+        <a th:href="@{/home}">HOME</a>
         <a th:href="@{/design}">DESIGN</a>
         <a th:href="@{/itemList}">ITEM LIST</a>
+        <div th:if="${hasRoleAdmin}">
+            <a th:href="@{/itemManagement}">MANAGE STOCK</a>
+        </div>
         <a th:href="@{/about}">ABOUT</a>
         <div class="nav-squish">
             <span class="nav-register">
