--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,30 +45,37 @@
           border-left: solid #808080;
           display: flex;
         }
-        .nav-login {
-            border-top: 1px solid #808080;
-        }
-        .nav-register {
-            border-bottom: 1px solid #808080;
-        }
         .nav-squish {
           display: flex;
           flex-direction: column;
           align-items: flex-end;
+          width: flex;
         }
-        .nav-register,
         .nav-login {
+          border-top: solid #808080;
           border-left: solid #808080;
-          width: 80px;
+          border-right: solid #808080;
+          padding-left: 1px;
+          padding-right: 1px;
+          width: 10%;
+          text-align: center;
         }
-        .nav-login a,
-        .nav-register a {
-          display: flex;
-          width: 80px;
-          justify-content: center;
-          align-items: center;
+        .nav-login a {
+          width: flex;
           height: 5px;
-          font-size: 10px;
+          width: 100%;
+          font-size: 13px;
+          line-height: 0.1;
+        }
+        .nav-role {
+          border-left: solid #808080;
+          border-right: solid #808080;
+          padding-left: 1px;
+          padding-right: 1px;
+          width: 10%;
+          text-align: center;
+          font-weight: bold;
+          color: #ffa31a;
         }
         /***** Footer *****/
         .footer-config {
@@ -140,9 +147,9 @@
             </div>
             <a th:href="@{/about}">ABOUT</a>
             <div class="nav-squish">
-                <span class="nav-register">
-                        <a th:href="@{/register}">Register</a>
-                </span>
+                <div class="nav-role" th:if="${userRole}">
+                    <div th:text="${userRole}"></div>
+                </div>
                 <span class="nav-login">
                         <a th:href="@{/login}">Login</a>
                 </span>
@@ -150,9 +157,6 @@
         </div>
 
 <body class="page-display">
-    <div th:if="${userRole}">
-        <div th:text="${userRole}"></div>
-    </div>
     <div class="title-container d-flex flex-column align-items-center justify-content-center">
         <h1 class="page-title">Welcome to the Clothing Warehouse!</h1>
         <p class="summary">What would you like to do:</p>
