--- a/src/main/resources/templates/itemManagement.html
+++ b/src/main/resources/templates/itemManagement.html
@@ -1,10 +1,140 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Item Management Page</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
+    <style>
+        /***** Nav-Bar *****/
+        .nav-bar {
+          background-color: #333;
+          overflow: hidden;
+          width: 100%;
+          border-bottom: solid #808080;
+          height: 57px;
+        }
+        .nav-bar a {
+          float: left;
+          color: #ffa31a;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+          font-weight: bold;
+        }
+        .nav-bar a:hover {
+          background-color: #ffa31a;
+          color: #1b1b1b;
+        }
+        .nav-bar a.active {
+          background-color: #04AA6D;
+          color: white;
+        }
+        .nav-title {
+          display: inline-block;
+          color: #ffa31a;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+          font-weight: bold;
+          float: left;
+          border-right: solid #808080;
+          border-left: solid #808080;
+          display: flex;
+        }
+        .nav-login {
+            border-top: 1px solid #808080;
+        }
+        .nav-register {
+            border-bottom: 1px solid #808080;
+        }
+        .nav-squish {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+          width: flex;
+        }
+        .nav-login {
+          border-top: solid #808080;
+          border-left: solid #808080;
+          border-right: solid #808080;
+          padding-left: 1px;
+          padding-right: 1px;
+          width: 10%;
+          text-align: center;
+        }
+        .nav-login a {
+          width: flex;
+          height: 5px;
+          width: 100%;
+          font-size: 13px;
+          line-height: 0.1;
+        }
+        .nav-role {
+          border-left: solid #808080;
+          border-right: solid #808080;
+          padding-left: 1px;
+          padding-right: 1px;
+          width: 10%;
+          text-align: center;
+          font-weight: bold;
+          color: #ffa31a;
+        }
+        /***** Footer *****/
+        .footer-config {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #333;
+            color: #ffa31a;
+            padding: 20px;
+            text-align: center;
+            border-top: solid #808080;
+        }
+        .gitHub-icon{
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            margin-left: auto;
+            float: right;
+        }
+        /***** Page Background *****/
+        .page-display {
+            background-color: #1b1b1b;
+            color: white;
+            vertical-align: middle;
+        }
+    </style>
 </head>
-<body>
 
+<div class="nav-bar">
+    <div class="nav-title"> Clothing Warehouse </div>
+    <a th:href="@{/home}">HOME</a>
+    <a th:href="@{/design}">DESIGN</a>
+    <a th:href="@{/itemList}">ITEM LIST</a>
+    <div th:if="${hasRoleAdmin}">
+        <a th:href="@{/itemManagement}">MANAGE STOCK</a>
+    </div>
+    <a th:href="@{/about}">ABOUT</a>
+    <div class="nav-squish">
+        <div class="nav-role" th:if="${userRole}">
+            <div th:text="${userRole}"></div>
+        </div>
+        <span class="nav-login">
+            <a th:href="@{/login}">Login</a>
+        </span>
+    </div>
+</div>
+<body class="page-display">
+    <footer class="footer-config">
+        <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
+        <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
+            <img src="/images/pngs/github-icon.png" alt="GitHub" class="gitHub-icon">
+        </a>
+    </footer>
 </body>
 </html>
