--- a/src/main/resources/templates/itemList.html
+++ b/src/main/resources/templates/itemList.html
@@ -192,7 +192,7 @@
     </div>
 
     <div class="d-flex flex-column bd-highlight justify-content-center align-items-center ms-5">
-        <form class="mt-3" method="post" th:action="@{/itemList}">
+        <form class="mt-3" method="post" th:action="@{/itemList/search}">
             <div class="mb-3">
                 <label for="brand" class="form-label">Brand:</label>
                 <select id="brand" name="brand" class="form-control">
@@ -207,8 +207,10 @@
             </div>
             <button type="submit">Search</button>
         </form>
+    </div>
+    <div class="d-flex flex-column bd-highlight justify-content-center align-items-center ms-5">
         <div class="btn-group mt-3">
-            <form class="m-0" method="post" th:action="@{/itemList}">
+            <form class="m-0" method="post" th:action="@{/itemList/pickSort}">
                 <button name="sortBy" value="name">Sort by Name</button>
                 <button name="sortBy" value="price">Sort by Price</button>
                 <button name="sortBy" value="brand">Sort by Brand</button>
