--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,7 +51,7 @@
           align-items: flex-end;
           width: flex;
         }
-        .nav-login {
+        .nav-authenticating {
           border-top: solid #808080;
           border-left: solid #808080;
           border-right: solid #808080;
@@ -60,7 +60,7 @@
           width: 12%;
           text-align: center;
         }
-        .nav-login a {
+        .nav-authenticating a {
           width: flex;
           height: 5px;
           width: 100%;
@@ -150,8 +150,11 @@
                 <div class="nav-role" th:if="${userRole}">
                     <div th:text="${userRole}"></div>
                 </div>
-                <span class="nav-login">
-                        <a th:href="@{/login}">Login</a>
+                <span class="nav-authenticating" th:if="${userRole == null or userRole == 'ROLE_ANONYMOUS'}">
+                    <a th:href="@{/login}">Login</a>
+                </span>
+                <span class="nav-authenticating" th:unless="${userRole == null or userRole == 'ROLE_ANONYMOUS'}">
+                    <a th:href="@{/logout}">Logout</a>
                 </span>
             </div>
         </div>
